--- a/web_viewer/static/styles.css
+++ b/web_viewer/static/styles.css
@@ -1,37 +1,78 @@
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 body {
     font-family: Arial, sans-serif;
-    background-color: white;
-    color: black;
-    margin: 0;
-    padding: 20px;
 }
-#header {
-    display: flex; /* Use Flexbox for header column layout */
-    background-color: blue; /* Header background color */
-    color: white; /* Header text color */
-    position: fixed; /* Fix the header at the top */
-    top: 0; /* Position at the very top */
+.header {
+    position: fixed;
+    top: 0;
     left: 0;
     right: 0;
-    padding: 10px 0; /* Padding around header */
-    z-index: 1000; /* Bring it above other elements */
+    background-color: darksalmon;
+    color: black;
+    border-bottom: 1px solid #ccc;
+    z-index: 1000;
 }
+.title {
+    text-align: center;
+    padding: 10px 0;
+    font-size: 1.5em;
+    background-color: darksalmon;
+    color: black;
+}
+.columns {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+.columnheader {
+    flex: 1;
+    text-align: center;
+    padding: 10px;
+    background-color: darksalmon;
+    color: black;
+    /* border: 1px solid #ccc; */
+}
+.narrow {
+    flex: 0 0 5%; /* One twentieth of the other columns */
+    width: 5%;
+}
+.content {
+    margin-top: 100px; /* Add top margin to ensure content does not overlap with fixed header */
+    padding: 20px;
+}
+
+
 .column {
-    flex: 1; /* Equal width for all columns in header */
-    text-align: center; /* Center text */
+    flex: 1; /* Each column takes equal space */
+    padding: 0px; /* Padding for columns */
+    text-align: center; /* Center text in columns */
+    /*border: 1px solid #ddd; /* Border for visual separation (optional) */
+}
+.column.right{
+    text-align:right;
+}
+.content{
+    margin-top: 140px;
+    padding: 0px;
 }
 
 #row-container {
     display: flex;
     flex-direction: column;
-    gap: 10px; /* Space between rows */
-    margin-top: 60px; /* Create space below the fixed header */
+    gap: 0px; /* Space between rows */
+    margin-top: 10px; /* Create space below the fixed header */
+    padding: 5px;
 } 
 .row {
     display: flex; /* Use Flexbox for row layout */
     justify-content: space-between; /* Space columns evenly */
-    padding: 10px;
-    border: 1px solid #ccc;
+    padding: 20px;
+    border: 1px solid #ccc; 
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
 }
@@ -40,7 +81,7 @@ body {
     color: white;
 }
 .row.active-row {
-    background-color: yellow; /* Highlight the active row */
+    background-color: mistyrose; /* Highlight the active row */
     color: black; /* Change text color to black */
 }
 a, u {
