--- a/web_viewer/static/styles.css
+++ b/web_viewer/static/styles.css
@@ -31,6 +31,26 @@ body {
     background-color: darksalmon;
     color: black;
 }
+
+.header-admin {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: cadetblue;
+    color: white;
+    border-bottom: 1px solid #ccc;
+    z-index: 1000;
+}
+.title-admin {
+    text-align: center;
+    padding: 10px 0;
+    font-size: 1.5em;
+    background-color: cadetblue;
+    color: white;
+}
+
+
 .columns {
     display: flex;
     justify-content: space-between;
@@ -44,6 +64,15 @@ body {
     color: black;
     /* border: 1px solid #ccc; */
 }
+.columnheader-admin {
+    flex: 1;
+    text-align: center;
+    padding: 10px;
+    background-color: cadetblue;
+    color: white;
+    /* border: 1px solid #ccc; */
+}
+
 .narrow {
     flex: 0 0 5%; /* One twentieth of the other columns */
     width: 5%;
@@ -58,11 +87,12 @@ body {
     flex: 1; /* Each column takes equal space */
     padding: 0px; /* Padding for columns */
     text-align: center; /* Center text in columns */
-    /*border: 1px solid #ddd; /* Border for visual separation (optional) */
+    border: 1px solid #ddd; /* Border for visual separation (optional) */
 }
 .column.right{
     text-align:right;
 }
+
 .content{
     margin-top: 140px;
     padding: 0px;
@@ -72,16 +102,30 @@ body {
     display: flex;
     flex-direction: column;
     gap: 0px; /* Space between rows */
-    margin-top: 10px; /* Create space below the fixed header */
+    margin-top: 50px; /* Create space below the fixed header */
     padding: 5px;
 } 
 .row {
     display: flex; /* Use Flexbox for row layout */
     justify-content: space-between; /* Space columns evenly */
-    padding: 20px;
-    border: 1px solid #ccc; 
+    padding-top: 0px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 0px solid #ccc; 
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
+}
+.row-first{
+    display: flex; /* Use Flexbox for row layout */
+    justify-content: space-between; /* Space columns evenly */
+    padding-top: 0px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 0px solid #ccc; 
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: palegreen;
+    color: black;
 }
 .row.active {
     background-color: blue;
