--- a/web_viewer/static/styles.css
+++ b/web_viewer/static/styles.css
@@ -42,6 +42,18 @@ body {
     border-bottom: 1px solid #ccc;
     z-index: 1000;
 }
+
+.header-listener {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: green;
+    color: white;
+    border-bottom: 1px solid #ccc;
+    z-index: 1000;
+}
+
 .title-admin {
     text-align: center;
     padding: 10px 0;
@@ -50,6 +62,13 @@ body {
     color: white;
 }
 
+.title-listener {
+    text-align: center;
+    padding: 10px 0;
+    font-size: 1.5em;
+    background-color: green;
+    color: white;
+}
 
 .columns {
     display: flex;
@@ -69,6 +88,15 @@ body {
     text-align: center;
     padding: 10px;
     background-color: cadetblue;
+    color: white;
+    /* border: 1px solid #ccc; */
+}
+
+.columnheader-listener {
+    flex: 1;
+    text-align: center;
+    padding: 10px;
+    background-color: green;
     color: white;
     /* border: 1px solid #ccc; */
 }
